update buildspec.yml with eb_codebuild_settings

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,3 +14,7 @@ phases:
   build:
     commands:
       - make deploy
+eb_codebuild_settings:
+  CodeBuildServiceRole: CodeBuildServiceRole
+  ComputeType: BUILD_GENERAL1_SMALL
+  Image: aws/codebuild/amazonlinux2-x86_64-standard:4.0
