--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,10 +1,13 @@
 branch-defaults:
   main:
-    environment: null
+    environment: flaskhelloworld-env
+environment-defaults:
+  flaskhelloworld-env:
+    branch: null
+    repository: null
 global:
   application_name: flaskhelloworld
-  branch: null
-  default_ec2_keyname: aws-eb
+  default_ec2_keyname: null
   default_platform: Python 3.8 running on 64bit Amazon Linux 2
   default_region: sa-east-1
   include_git_submodules: true
@@ -12,6 +15,5 @@ global:
   platform_name: null
   platform_version: null
   profile: null
-  repository: null
   sc: git
   workspace_type: Application
